test_suite/tests/ui/borrow/duplicate_variant.stderr
error: duplicate serde attribute `borrow`
 --> $DIR/duplicate_variant.rs:7:10
  |
7 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

